ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: static-ingress
 namespace: static
spec:
 rules:
 - host: k8s.sathishji.xyz
   http:
     paths:
     - path:
       backend:
         serviceName: static-svc
         servicePort: 80
